// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Operational Solutions Model Usage Components > matches the snapshot > 4innovation 1`] = `
<DocumentFragment>
  <div>
    <h2
      class="margin-top-0"
    >
      Model usage
    </h2>
    <div
      class="operational-solution-details line-height-body-5 font-body-md text-pre-wrap"
    >
      <p>
        The models below use or plan to use 4innovation to implement and run their model. Click on each model to learn more about the model and its solutions and IT systems.
      </p>
      <div
        class="usa-alert usa-alert--info usa-alert--slim flex margin-y-3"
        data-testid="alert"
      >
        <div
          class="usa-alert__body"
        >
          <p
            class="usa-alert__text"
          >
            <span>
              This list shows solutions and IT systems identified for models in MINT. Older models, past models, or other models listed in MINT may not appear here. If you have any questions, please contact the MINT Team at &lt;email&gt;MINTTeam@cms.hhs.gov&lt;/email&gt;.
            </span>
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Operational Solutions Model Usage Components > matches the snapshot > Accountable Care Organization - Operational System 1`] = `
<DocumentFragment>
  <div>
    <h2
      class="margin-top-0"
    >
      Model usage
    </h2>
    <div
      class="operational-solution-details line-height-body-5 font-body-md text-pre-wrap"
    >
      <p>
        The models below use or plan to use Accountable Care Organization - Operational System to implement and run their model. Click on each model to learn more about the model and its solutions and IT systems.
      </p>
      <div
        class="usa-alert usa-alert--info usa-alert--slim flex margin-y-3"
        data-testid="alert"
      >
        <div
          class="usa-alert__body"
        >
          <p
            class="usa-alert__text"
          >
            <span>
              This list shows solutions and IT systems identified for models in MINT. Older models, past models, or other models listed in MINT may not appear here. If you have any questions, please contact the MINT Team at &lt;email&gt;MINTTeam@cms.hhs.gov&lt;/email&gt;.
            </span>
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Operational Solutions Model Usage Components > matches the snapshot > Actuarial Research and Development Services 1`] = `
<DocumentFragment>
  <div>
    <h2
      class="margin-top-0"
    >
      Model usage
    </h2>
    <div
      class="operational-solution-details line-height-body-5 font-body-md text-pre-wrap"
    >
      <p>
        The models below use or plan to use Actuarial Research and Development Services to implement and run their model. Click on each model to learn more about the model and its solutions and IT systems.
      </p>
      <div
        class="usa-alert usa-alert--info usa-alert--slim flex margin-y-3"
        data-testid="alert"
      >
        <div
          class="usa-alert__body"
        >
          <p
            class="usa-alert__text"
          >
            <span>
              This list shows solutions and IT systems identified for models in MINT. Older models, past models, or other models listed in MINT may not appear here. If you have any questions, please contact the MINT Team at &lt;email&gt;MINTTeam@cms.hhs.gov&lt;/email&gt;.
            </span>
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Operational Solutions Model Usage Components > matches the snapshot > Automated Plan Payment System 1`] = `
<DocumentFragment>
  <div>
    <h2
      class="margin-top-0"
    >
      Model usage
    </h2>
    <div
      class="operational-solution-details line-height-body-5 font-body-md text-pre-wrap"
    >
      <p>
        The models below use or plan to use Automated Plan Payment System to implement and run their model. Click on each model to learn more about the model and its solutions and IT systems.
      </p>
      <div
        class="usa-alert usa-alert--info usa-alert--slim flex margin-y-3"
        data-testid="alert"
      >
        <div
          class="usa-alert__body"
        >
          <p
            class="usa-alert__text"
          >
            <span>
              This list shows solutions and IT systems identified for models in MINT. Older models, past models, or other models listed in MINT may not appear here. If you have any questions, please contact the MINT Team at &lt;email&gt;MINTTeam@cms.hhs.gov&lt;/email&gt;.
            </span>
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Operational Solutions Model Usage Components > matches the snapshot > Beneficiary Claims Data API 1`] = `
<DocumentFragment>
  <div>
    <h2
      class="margin-top-0"
    >
      Model usage
    </h2>
    <div
      class="operational-solution-details line-height-body-5 font-body-md text-pre-wrap"
    >
      <p>
        The models below use or plan to use Beneficiary Claims Data API to implement and run their model. Click on each model to learn more about the model and its solutions and IT systems.
      </p>
      <div
        class="usa-alert usa-alert--info usa-alert--slim flex margin-y-3"
        data-testid="alert"
      >
        <div
          class="usa-alert__body"
        >
          <p
            class="usa-alert__text"
          >
            <span>
              This list shows solutions and IT systems identified for models in MINT. Older models, past models, or other models listed in MINT may not appear here. If you have any questions, please contact the MINT Team at &lt;email&gt;MINTTeam@cms.hhs.gov&lt;/email&gt;.
            </span>
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Operational Solutions Model Usage Components > matches the snapshot > CMMI Analysis and Management System 1`] = `
<DocumentFragment>
  <div>
    <h2
      class="margin-top-0"
    >
      Model usage
    </h2>
    <div
      class="operational-solution-details line-height-body-5 font-body-md text-pre-wrap"
    >
      <p>
        The models below use or plan to use CMMI Analysis and Management System to implement and run their model. Click on each model to learn more about the model and its solutions and IT systems.
      </p>
      <div
        class="usa-alert usa-alert--info usa-alert--slim flex margin-y-3"
        data-testid="alert"
      >
        <div
          class="usa-alert__body"
        >
          <p
            class="usa-alert__text"
          >
            <span>
              This list shows solutions and IT systems identified for models in MINT. Older models, past models, or other models listed in MINT may not appear here. If you have any questions, please contact the MINT Team at &lt;email&gt;MINTTeam@cms.hhs.gov&lt;/email&gt;.
            </span>
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Operational Solutions Model Usage Components > matches the snapshot > CMMI Data Aggregation Contract 1`] = `
<DocumentFragment>
  <div>
    <h2
      class="margin-top-0"
    >
      Model usage
    </h2>
    <div
      class="operational-solution-details line-height-body-5 font-body-md text-pre-wrap"
    >
      <p>
        The models below use or plan to use CMMI Data Aggregation Contract to implement and run their model. Click on each model to learn more about the model and its solutions and IT systems.
      </p>
      <div
        class="usa-alert usa-alert--info usa-alert--slim flex margin-y-3"
        data-testid="alert"
      >
        <div
          class="usa-alert__body"
        >
          <p
            class="usa-alert__text"
          >
            <span>
              This list shows solutions and IT systems identified for models in MINT. Older models, past models, or other models listed in MINT may not appear here. If you have any questions, please contact the MINT Team at &lt;email&gt;MINTTeam@cms.hhs.gov&lt;/email&gt;.
            </span>
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Operational Solutions Model Usage Components > matches the snapshot > CMS Box 1`] = `
<DocumentFragment>
  <div>
    <h2
      class="margin-top-0"
    >
      Model usage
    </h2>
    <div
      class="operational-solution-details line-height-body-5 font-body-md text-pre-wrap"
    >
      <p>
        The models below use or plan to use CMS Box to implement and run their model. Click on each model to learn more about the model and its solutions and IT systems.
      </p>
      <div
        class="usa-alert usa-alert--info usa-alert--slim flex margin-y-3"
        data-testid="alert"
      >
        <div
          class="usa-alert__body"
        >
          <p
            class="usa-alert__text"
          >
            <span>
              This list shows solutions and IT systems identified for models in MINT. Older models, past models, or other models listed in MINT may not appear here. If you have any questions, please contact the MINT Team at &lt;email&gt;MINTTeam@cms.hhs.gov&lt;/email&gt;.
            </span>
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Operational Solutions Model Usage Components > matches the snapshot > CPI Vetting 1`] = `
<DocumentFragment>
  <div>
    <h2
      class="margin-top-0"
    >
      Model usage
    </h2>
    <div
      class="operational-solution-details line-height-body-5 font-body-md text-pre-wrap"
    >
      <p>
        The models below use or plan to use CPI Vetting to implement and run their model. Click on each model to learn more about the model and its solutions and IT systems.
      </p>
      <div
        class="usa-alert usa-alert--info usa-alert--slim flex margin-y-3"
        data-testid="alert"
      >
        <div
          class="usa-alert__body"
        >
          <p
            class="usa-alert__text"
          >
            <span>
              This list shows solutions and IT systems identified for models in MINT. Older models, past models, or other models listed in MINT may not appear here. If you have any questions, please contact the MINT Team at &lt;email&gt;MINTTeam@cms.hhs.gov&lt;/email&gt;.
            </span>
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Operational Solutions Model Usage Components > matches the snapshot > Centralized Data Exchange 1`] = `
<DocumentFragment>
  <div>
    <h2
      class="margin-top-0"
    >
      Model usage
    </h2>
    <div
      class="operational-solution-details line-height-body-5 font-body-md text-pre-wrap"
    >
      <p>
        The models below use or plan to use Centralized Data Exchange to implement and run their model. Click on each model to learn more about the model and its solutions and IT systems.
      </p>
      <div
        class="usa-alert usa-alert--info usa-alert--slim flex margin-y-3"
        data-testid="alert"
      >
        <div
          class="usa-alert__body"
        >
          <p
            class="usa-alert__text"
          >
            <span>
              This list shows solutions and IT systems identified for models in MINT. Older models, past models, or other models listed in MINT may not appear here. If you have any questions, please contact the MINT Team at &lt;email&gt;MINTTeam@cms.hhs.gov&lt;/email&gt;.
            </span>
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Operational Solutions Model Usage Components > matches the snapshot > Chronic Conditions Warehouse 1`] = `
<DocumentFragment>
  <div>
    <h2
      class="margin-top-0"
    >
      Model usage
    </h2>
    <div
      class="operational-solution-details line-height-body-5 font-body-md text-pre-wrap"
    >
      <p>
        The models below use or plan to use Chronic Conditions Warehouse to implement and run their model. Click on each model to learn more about the model and its solutions and IT systems.
      </p>
      <div
        class="usa-alert usa-alert--info usa-alert--slim flex margin-y-3"
        data-testid="alert"
      >
        <div
          class="usa-alert__body"
        >
          <p
            class="usa-alert__text"
          >
            <span>
              This list shows solutions and IT systems identified for models in MINT. Older models, past models, or other models listed in MINT may not appear here. If you have any questions, please contact the MINT Team at &lt;email&gt;MINTTeam@cms.hhs.gov&lt;/email&gt;.
            </span>
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Operational Solutions Model Usage Components > matches the snapshot > Consolidated Business Operations Support Center 1`] = `
<DocumentFragment>
  <div>
    <h2
      class="margin-top-0"
    >
      Model usage
    </h2>
    <div
      class="operational-solution-details line-height-body-5 font-body-md text-pre-wrap"
    >
      <p>
        The models below use or plan to use Consolidated Business Operations Support Center to implement and run their model. Click on each model to learn more about the model and its solutions and IT systems.
      </p>
      <div
        class="usa-alert usa-alert--info usa-alert--slim flex margin-y-3"
        data-testid="alert"
      >
        <div
          class="usa-alert__body"
        >
          <p
            class="usa-alert__text"
          >
            <span>
              This list shows solutions and IT systems identified for models in MINT. Older models, past models, or other models listed in MINT may not appear here. If you have any questions, please contact the MINT Team at &lt;email&gt;MINTTeam@cms.hhs.gov&lt;/email&gt;.
            </span>
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Operational Solutions Model Usage Components > matches the snapshot > Division of Stakeholder Engagement and Policy 1`] = `
<DocumentFragment>
  <div>
    <h2
      class="margin-top-0"
    >
      Model usage
    </h2>
    <div
      class="operational-solution-details line-height-body-5 font-body-md text-pre-wrap"
    >
      <p>
        The models below use or plan to use Division of Stakeholder Engagement and Policy to implement and run their model. Click on each model to learn more about the model and its solutions and IT systems.
      </p>
      <div
        class="usa-alert usa-alert--info usa-alert--slim flex margin-y-3"
        data-testid="alert"
      >
        <div
          class="usa-alert__body"
        >
          <p
            class="usa-alert__text"
          >
            <span>
              This list shows solutions and IT systems identified for models in MINT. Older models, past models, or other models listed in MINT may not appear here. If you have any questions, please contact the MINT Team at &lt;email&gt;MINTTeam@cms.hhs.gov&lt;/email&gt;.
            </span>
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Operational Solutions Model Usage Components > matches the snapshot > Drug Data Processing System 1`] = `
<DocumentFragment>
  <div>
    <h2
      class="margin-top-0"
    >
      Model usage
    </h2>
    <div
      class="operational-solution-details line-height-body-5 font-body-md text-pre-wrap"
    >
      <p>
        The models below use or plan to use Drug Data Processing System to implement and run their model. Click on each model to learn more about the model and its solutions and IT systems.
      </p>
      <div
        class="usa-alert usa-alert--info usa-alert--slim flex margin-y-3"
        data-testid="alert"
      >
        <div
          class="usa-alert__body"
        >
          <p
            class="usa-alert__text"
          >
            <span>
              This list shows solutions and IT systems identified for models in MINT. Older models, past models, or other models listed in MINT may not appear here. If you have any questions, please contact the MINT Team at &lt;email&gt;MINTTeam@cms.hhs.gov&lt;/email&gt;.
            </span>
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Operational Solutions Model Usage Components > matches the snapshot > Electronic File Transfer 1`] = `
<DocumentFragment>
  <div>
    <h2
      class="margin-top-0"
    >
      Model usage
    </h2>
    <div
      class="operational-solution-details line-height-body-5 font-body-md text-pre-wrap"
    >
      <p>
        The models below use or plan to use Electronic File Transfer to implement and run their model. Click on each model to learn more about the model and its solutions and IT systems.
      </p>
      <div
        class="usa-alert usa-alert--info usa-alert--slim flex margin-y-3"
        data-testid="alert"
      >
        <div
          class="usa-alert__body"
        >
          <p
            class="usa-alert__text"
          >
            <span>
              This list shows solutions and IT systems identified for models in MINT. Older models, past models, or other models listed in MINT may not appear here. If you have any questions, please contact the MINT Team at &lt;email&gt;MINTTeam@cms.hhs.gov&lt;/email&gt;.
            </span>
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Operational Solutions Model Usage Components > matches the snapshot > Enterprise Privacy Policy Engine Cloud 1`] = `
<DocumentFragment>
  <div>
    <h2
      class="margin-top-0"
    >
      Model usage
    </h2>
    <div
      class="operational-solution-details line-height-body-5 font-body-md text-pre-wrap"
    >
      <p>
        The models below use or plan to use Enterprise Privacy Policy Engine Cloud to implement and run their model. Click on each model to learn more about the model and its solutions and IT systems.
      </p>
      <div
        class="usa-alert usa-alert--info usa-alert--slim flex margin-y-3"
        data-testid="alert"
      >
        <div
          class="usa-alert__body"
        >
          <p
            class="usa-alert__text"
          >
            <span>
              This list shows solutions and IT systems identified for models in MINT. Older models, past models, or other models listed in MINT may not appear here. If you have any questions, please contact the MINT Team at &lt;email&gt;MINTTeam@cms.hhs.gov&lt;/email&gt;.
            </span>
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Operational Solutions Model Usage Components > matches the snapshot > Expanded Data Feedback Reporting 1`] = `
<DocumentFragment>
  <div>
    <h2
      class="margin-top-0"
    >
      Model usage
    </h2>
    <div
      class="operational-solution-details line-height-body-5 font-body-md text-pre-wrap"
    >
      <p>
        The models below use or plan to use Expanded Data Feedback Reporting to implement and run their model. Click on each model to learn more about the model and its solutions and IT systems.
      </p>
      <div
        class="usa-alert usa-alert--info usa-alert--slim flex margin-y-3"
        data-testid="alert"
      >
        <div
          class="usa-alert__body"
        >
          <p
            class="usa-alert__text"
          >
            <span>
              This list shows solutions and IT systems identified for models in MINT. Older models, past models, or other models listed in MINT may not appear here. If you have any questions, please contact the MINT Team at &lt;email&gt;MINTTeam@cms.hhs.gov&lt;/email&gt;.
            </span>
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Operational Solutions Model Usage Components > matches the snapshot > Federal Funded Research and Development Center 1`] = `
<DocumentFragment>
  <div>
    <h2
      class="margin-top-0"
    >
      Model usage
    </h2>
    <div
      class="operational-solution-details line-height-body-5 font-body-md text-pre-wrap"
    >
      <p>
        The models below use or plan to use Federal Funded Research and Development Center to implement and run their model. Click on each model to learn more about the model and its solutions and IT systems.
      </p>
      <div
        class="usa-alert usa-alert--info usa-alert--slim flex margin-y-3"
        data-testid="alert"
      >
        <div
          class="usa-alert__body"
        >
          <p
            class="usa-alert__text"
          >
            <span>
              This list shows solutions and IT systems identified for models in MINT. Older models, past models, or other models listed in MINT may not appear here. If you have any questions, please contact the MINT Team at &lt;email&gt;MINTTeam@cms.hhs.gov&lt;/email&gt;.
            </span>
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Operational Solutions Model Usage Components > matches the snapshot > GovDelivery 1`] = `
<DocumentFragment>
  <div>
    <h2
      class="margin-top-0"
    >
      Model usage
    </h2>
    <div
      class="operational-solution-details line-height-body-5 font-body-md text-pre-wrap"
    >
      <p>
        The models below use or plan to use GovDelivery to implement and run their model. Click on each model to learn more about the model and its solutions and IT systems.
      </p>
      <div
        class="usa-alert usa-alert--info usa-alert--slim flex margin-y-3"
        data-testid="alert"
      >
        <div
          class="usa-alert__body"
        >
          <p
            class="usa-alert__text"
          >
            <span>
              This list shows solutions and IT systems identified for models in MINT. Older models, past models, or other models listed in MINT may not appear here. If you have any questions, please contact the MINT Team at &lt;email&gt;MINTTeam@cms.hhs.gov&lt;/email&gt;.
            </span>
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Operational Solutions Model Usage Components > matches the snapshot > GrantSolutions 1`] = `
<DocumentFragment>
  <div>
    <h2
      class="margin-top-0"
    >
      Model usage
    </h2>
    <div
      class="operational-solution-details line-height-body-5 font-body-md text-pre-wrap"
    >
      <p>
        The models below use or plan to use GrantSolutions to implement and run their model. Click on each model to learn more about the model and its solutions and IT systems.
      </p>
      <div
        class="usa-alert usa-alert--info usa-alert--slim flex margin-y-3"
        data-testid="alert"
      >
        <div
          class="usa-alert__body"
        >
          <p
            class="usa-alert__text"
          >
            <span>
              This list shows solutions and IT systems identified for models in MINT. Older models, past models, or other models listed in MINT may not appear here. If you have any questions, please contact the MINT Team at &lt;email&gt;MINTTeam@cms.hhs.gov&lt;/email&gt;.
            </span>
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Operational Solutions Model Usage Components > matches the snapshot > Health Data Reporting 1`] = `
<DocumentFragment>
  <div>
    <h2
      class="margin-top-0"
    >
      Model usage
    </h2>
    <div
      class="operational-solution-details line-height-body-5 font-body-md text-pre-wrap"
    >
      <p>
        The models below use or plan to use Health Data Reporting to implement and run their model. Click on each model to learn more about the model and its solutions and IT systems.
      </p>
      <div
        class="usa-alert usa-alert--info usa-alert--slim flex margin-y-3"
        data-testid="alert"
      >
        <div
          class="usa-alert__body"
        >
          <p
            class="usa-alert__text"
          >
            <span>
              This list shows solutions and IT systems identified for models in MINT. Older models, past models, or other models listed in MINT may not appear here. If you have any questions, please contact the MINT Team at &lt;email&gt;MINTTeam@cms.hhs.gov&lt;/email&gt;.
            </span>
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Operational Solutions Model Usage Components > matches the snapshot > Health Plan Management System 1`] = `
<DocumentFragment>
  <div>
    <h2
      class="margin-top-0"
    >
      Model usage
    </h2>
    <div
      class="operational-solution-details line-height-body-5 font-body-md text-pre-wrap"
    >
      <p>
        The models below use or plan to use Health Plan Management System to implement and run their model. Click on each model to learn more about the model and its solutions and IT systems.
      </p>
      <div
        class="usa-alert usa-alert--info usa-alert--slim flex margin-y-3"
        data-testid="alert"
      >
        <div
          class="usa-alert__body"
        >
          <p
            class="usa-alert__text"
          >
            <span>
              This list shows solutions and IT systems identified for models in MINT. Older models, past models, or other models listed in MINT may not appear here. If you have any questions, please contact the MINT Team at &lt;email&gt;MINTTeam@cms.hhs.gov&lt;/email&gt;.
            </span>
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Operational Solutions Model Usage Components > matches the snapshot > Healthcare Integrated General Ledger Accounting System 1`] = `
<DocumentFragment>
  <div>
    <h2
      class="margin-top-0"
    >
      Model usage
    </h2>
    <div
      class="operational-solution-details line-height-body-5 font-body-md text-pre-wrap"
    >
      <p>
        The models below use or plan to use Healthcare Integrated General Ledger Accounting System to implement and run their model. Click on each model to learn more about the model and its solutions and IT systems.
      </p>
      <div
        class="usa-alert usa-alert--info usa-alert--slim flex margin-y-3"
        data-testid="alert"
      >
        <div
          class="usa-alert__body"
        >
          <p
            class="usa-alert__text"
          >
            <span>
              This list shows solutions and IT systems identified for models in MINT. Older models, past models, or other models listed in MINT may not appear here. If you have any questions, please contact the MINT Team at &lt;email&gt;MINTTeam@cms.hhs.gov&lt;/email&gt;.
            </span>
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Operational Solutions Model Usage Components > matches the snapshot > Innovation Center Landing Page 1`] = `
<DocumentFragment>
  <div>
    <h2
      class="margin-top-0"
    >
      Model usage
    </h2>
    <div
      class="operational-solution-details line-height-body-5 font-body-md text-pre-wrap"
    >
      <p>
        The models below use or plan to use Innovation Center Landing Page to implement and run their model. Click on each model to learn more about the model and its solutions and IT systems.
      </p>
      <div
        class="usa-alert usa-alert--info usa-alert--slim flex margin-y-3"
        data-testid="alert"
      >
        <div
          class="usa-alert__body"
        >
          <p
            class="usa-alert__text"
          >
            <span>
              This list shows solutions and IT systems identified for models in MINT. Older models, past models, or other models listed in MINT may not appear here. If you have any questions, please contact the MINT Team at &lt;email&gt;MINTTeam@cms.hhs.gov&lt;/email&gt;.
            </span>
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Operational Solutions Model Usage Components > matches the snapshot > Innovation Payment Contractor 1`] = `
<DocumentFragment>
  <div>
    <h2
      class="margin-top-0"
    >
      Model usage
    </h2>
    <div
      class="operational-solution-details line-height-body-5 font-body-md text-pre-wrap"
    >
      <p>
        The models below use or plan to use Innovation Payment Contractor to implement and run their model. Click on each model to learn more about the model and its solutions and IT systems.
      </p>
      <div
        class="usa-alert usa-alert--info usa-alert--slim flex margin-y-3"
        data-testid="alert"
      >
        <div
          class="usa-alert__body"
        >
          <p
            class="usa-alert__text"
          >
            <span>
              This list shows solutions and IT systems identified for models in MINT. Older models, past models, or other models listed in MINT may not appear here. If you have any questions, please contact the MINT Team at &lt;email&gt;MINTTeam@cms.hhs.gov&lt;/email&gt;.
            </span>
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Operational Solutions Model Usage Components > matches the snapshot > Innovation Support Platform 1`] = `
<DocumentFragment>
  <div>
    <h2
      class="margin-top-0"
    >
      Model usage
    </h2>
    <div
      class="operational-solution-details line-height-body-5 font-body-md text-pre-wrap"
    >
      <p>
        The models below use or plan to use Innovation Support Platform to implement and run their model. Click on each model to learn more about the model and its solutions and IT systems.
      </p>
      <div
        class="usa-alert usa-alert--info usa-alert--slim flex margin-y-3"
        data-testid="alert"
      >
        <div
          class="usa-alert__body"
        >
          <p
            class="usa-alert__text"
          >
            <span>
              This list shows solutions and IT systems identified for models in MINT. Older models, past models, or other models listed in MINT may not appear here. If you have any questions, please contact the MINT Team at &lt;email&gt;MINTTeam@cms.hhs.gov&lt;/email&gt;.
            </span>
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Operational Solutions Model Usage Components > matches the snapshot > Integrated Data Repository 1`] = `
<DocumentFragment>
  <div>
    <h2
      class="margin-top-0"
    >
      Model usage
    </h2>
    <div
      class="operational-solution-details line-height-body-5 font-body-md text-pre-wrap"
    >
      <p>
        The models below use or plan to use Integrated Data Repository to implement and run their model. Click on each model to learn more about the model and its solutions and IT systems.
      </p>
      <div
        class="usa-alert usa-alert--info usa-alert--slim flex margin-y-3"
        data-testid="alert"
      >
        <div
          class="usa-alert__body"
        >
          <p
            class="usa-alert__text"
          >
            <span>
              This list shows solutions and IT systems identified for models in MINT. Older models, past models, or other models listed in MINT may not appear here. If you have any questions, please contact the MINT Team at &lt;email&gt;MINTTeam@cms.hhs.gov&lt;/email&gt;.
            </span>
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Operational Solutions Model Usage Components > matches the snapshot > Learning and Diffusion Group 1`] = `
<DocumentFragment>
  <div>
    <h2
      class="margin-top-0"
    >
      Model usage
    </h2>
    <div
      class="operational-solution-details line-height-body-5 font-body-md text-pre-wrap"
    >
      <p>
        The models below use or plan to use Learning and Diffusion Group to implement and run their model. Click on each model to learn more about the model and its solutions and IT systems.
      </p>
      <div
        class="usa-alert usa-alert--info usa-alert--slim flex margin-y-3"
        data-testid="alert"
      >
        <div
          class="usa-alert__body"
        >
          <p
            class="usa-alert__text"
          >
            <span>
              This list shows solutions and IT systems identified for models in MINT. Older models, past models, or other models listed in MINT may not appear here. If you have any questions, please contact the MINT Team at &lt;email&gt;MINTTeam@cms.hhs.gov&lt;/email&gt;.
            </span>
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Operational Solutions Model Usage Components > matches the snapshot > Legal Vertical 1`] = `
<DocumentFragment>
  <div>
    <h2
      class="margin-top-0"
    >
      Model usage
    </h2>
    <div
      class="operational-solution-details line-height-body-5 font-body-md text-pre-wrap"
    >
      <p>
        The models below use or plan to use Legal Vertical to implement and run their model. Click on each model to learn more about the model and its solutions and IT systems.
      </p>
      <div
        class="usa-alert usa-alert--info usa-alert--slim flex margin-y-3"
        data-testid="alert"
      >
        <div
          class="usa-alert__body"
        >
          <p
            class="usa-alert__text"
          >
            <span>
              This list shows solutions and IT systems identified for models in MINT. Older models, past models, or other models listed in MINT may not appear here. If you have any questions, please contact the MINT Team at &lt;email&gt;MINTTeam@cms.hhs.gov&lt;/email&gt;.
            </span>
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Operational Solutions Model Usage Components > matches the snapshot > Master Data Management for Non-Claims Based Payments 1`] = `
<DocumentFragment>
  <div>
    <h2
      class="margin-top-0"
    >
      Model usage
    </h2>
    <div
      class="operational-solution-details line-height-body-5 font-body-md text-pre-wrap"
    >
      <p>
        The models below use or plan to use Master Data Management for Non-Claims Based Payments to implement and run their model. Click on each model to learn more about the model and its solutions and IT systems.
      </p>
      <div
        class="usa-alert usa-alert--info usa-alert--slim flex margin-y-3"
        data-testid="alert"
      >
        <div
          class="usa-alert__body"
        >
          <p
            class="usa-alert__text"
          >
            <span>
              This list shows solutions and IT systems identified for models in MINT. Older models, past models, or other models listed in MINT may not appear here. If you have any questions, please contact the MINT Team at &lt;email&gt;MINTTeam@cms.hhs.gov&lt;/email&gt;.
            </span>
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Operational Solutions Model Usage Components > matches the snapshot > Measure and Instrument Development and Support 1`] = `
<DocumentFragment>
  <div>
    <h2
      class="margin-top-0"
    >
      Model usage
    </h2>
    <div
      class="operational-solution-details line-height-body-5 font-body-md text-pre-wrap"
    >
      <p>
        The models below use or plan to use Measure and Instrument Development and Support to implement and run their model. Click on each model to learn more about the model and its solutions and IT systems.
      </p>
      <div
        class="usa-alert usa-alert--info usa-alert--slim flex margin-y-3"
        data-testid="alert"
      >
        <div
          class="usa-alert__body"
        >
          <p
            class="usa-alert__text"
          >
            <span>
              This list shows solutions and IT systems identified for models in MINT. Older models, past models, or other models listed in MINT may not appear here. If you have any questions, please contact the MINT Team at &lt;email&gt;MINTTeam@cms.hhs.gov&lt;/email&gt;.
            </span>
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Operational Solutions Model Usage Components > matches the snapshot > Medicare Advantage Prescription Drug System 1`] = `
<DocumentFragment>
  <div>
    <h2
      class="margin-top-0"
    >
      Model usage
    </h2>
    <div
      class="operational-solution-details line-height-body-5 font-body-md text-pre-wrap"
    >
      <p>
        The models below use or plan to use Medicare Advantage Prescription Drug System to implement and run their model. Click on each model to learn more about the model and its solutions and IT systems.
      </p>
      <div
        class="usa-alert usa-alert--info usa-alert--slim flex margin-y-3"
        data-testid="alert"
      >
        <div
          class="usa-alert__body"
        >
          <p
            class="usa-alert__text"
          >
            <span>
              This list shows solutions and IT systems identified for models in MINT. Older models, past models, or other models listed in MINT may not appear here. If you have any questions, please contact the MINT Team at &lt;email&gt;MINTTeam@cms.hhs.gov&lt;/email&gt;.
            </span>
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Operational Solutions Model Usage Components > matches the snapshot > Microsoft Forms 1`] = `
<DocumentFragment>
  <div>
    <h2
      class="margin-top-0"
    >
      Model usage
    </h2>
    <div
      class="operational-solution-details line-height-body-5 font-body-md text-pre-wrap"
    >
      <p>
        The models below use or plan to use Microsoft Forms to implement and run their model. Click on each model to learn more about the model and its solutions and IT systems.
      </p>
      <div
        class="usa-alert usa-alert--info usa-alert--slim flex margin-y-3"
        data-testid="alert"
      >
        <div
          class="usa-alert__body"
        >
          <p
            class="usa-alert__text"
          >
            <span>
              This list shows solutions and IT systems identified for models in MINT. Older models, past models, or other models listed in MINT may not appear here. If you have any questions, please contact the MINT Team at &lt;email&gt;MINTTeam@cms.hhs.gov&lt;/email&gt;.
            </span>
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Operational Solutions Model Usage Components > matches the snapshot > Model Space 1`] = `
<DocumentFragment>
  <div>
    <h2
      class="margin-top-0"
    >
      Model usage
    </h2>
    <div
      class="operational-solution-details line-height-body-5 font-body-md text-pre-wrap"
    >
      <p>
        The models below use or plan to use Model Space to implement and run their model. Click on each model to learn more about the model and its solutions and IT systems.
      </p>
      <div
        class="usa-alert usa-alert--info usa-alert--slim flex margin-y-3"
        data-testid="alert"
      >
        <div
          class="usa-alert__body"
        >
          <p
            class="usa-alert__text"
          >
            <span>
              This list shows solutions and IT systems identified for models in MINT. Older models, past models, or other models listed in MINT may not appear here. If you have any questions, please contact the MINT Team at &lt;email&gt;MINTTeam@cms.hhs.gov&lt;/email&gt;.
            </span>
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Operational Solutions Model Usage Components > matches the snapshot > National Committee for Quality Assurance 1`] = `
<DocumentFragment>
  <div>
    <h2
      class="margin-top-0"
    >
      Model usage
    </h2>
    <div
      class="operational-solution-details line-height-body-5 font-body-md text-pre-wrap"
    >
      <p>
        The models below use or plan to use National Committee for Quality Assurance to implement and run their model. Click on each model to learn more about the model and its solutions and IT systems.
      </p>
      <div
        class="usa-alert usa-alert--info usa-alert--slim flex margin-y-3"
        data-testid="alert"
      >
        <div
          class="usa-alert__body"
        >
          <p
            class="usa-alert__text"
          >
            <span>
              This list shows solutions and IT systems identified for models in MINT. Older models, past models, or other models listed in MINT may not appear here. If you have any questions, please contact the MINT Team at &lt;email&gt;MINTTeam@cms.hhs.gov&lt;/email&gt;.
            </span>
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Operational Solutions Model Usage Components > matches the snapshot > Office of the Actuary 1`] = `
<DocumentFragment>
  <div>
    <h2
      class="margin-top-0"
    >
      Model usage
    </h2>
    <div
      class="operational-solution-details line-height-body-5 font-body-md text-pre-wrap"
    >
      <p>
        The models below use or plan to use Office of the Actuary to implement and run their model. Click on each model to learn more about the model and its solutions and IT systems.
      </p>
      <div
        class="usa-alert usa-alert--info usa-alert--slim flex margin-y-3"
        data-testid="alert"
      >
        <div
          class="usa-alert__body"
        >
          <p
            class="usa-alert__text"
          >
            <span>
              This list shows solutions and IT systems identified for models in MINT. Older models, past models, or other models listed in MINT may not appear here. If you have any questions, please contact the MINT Team at &lt;email&gt;MINTTeam@cms.hhs.gov&lt;/email&gt;.
            </span>
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Operational Solutions Model Usage Components > matches the snapshot > Outlook Mailbox 1`] = `
<DocumentFragment>
  <div>
    <h2
      class="margin-top-0"
    >
      Model usage
    </h2>
    <div
      class="operational-solution-details line-height-body-5 font-body-md text-pre-wrap"
    >
      <p>
        The models below use or plan to use Outlook Mailbox to implement and run their model. Click on each model to learn more about the model and its solutions and IT systems.
      </p>
      <div
        class="usa-alert usa-alert--info usa-alert--slim flex margin-y-3"
        data-testid="alert"
      >
        <div
          class="usa-alert__body"
        >
          <p
            class="usa-alert__text"
          >
            <span>
              This list shows solutions and IT systems identified for models in MINT. Older models, past models, or other models listed in MINT may not appear here. If you have any questions, please contact the MINT Team at &lt;email&gt;MINTTeam@cms.hhs.gov&lt;/email&gt;.
            </span>
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Operational Solutions Model Usage Components > matches the snapshot > Overlaps Operations Workgroup 1`] = `
<DocumentFragment>
  <div>
    <h2
      class="margin-top-0"
    >
      Model usage
    </h2>
    <div
      class="operational-solution-details line-height-body-5 font-body-md text-pre-wrap"
    >
      <p>
        The models below use or plan to use Overlaps Operations Workgroup to implement and run their model. Click on each model to learn more about the model and its solutions and IT systems.
      </p>
      <div
        class="usa-alert usa-alert--info usa-alert--slim flex margin-y-3"
        data-testid="alert"
      >
        <div
          class="usa-alert__body"
        >
          <p
            class="usa-alert__text"
          >
            <span>
              This list shows solutions and IT systems identified for models in MINT. Older models, past models, or other models listed in MINT may not appear here. If you have any questions, please contact the MINT Team at &lt;email&gt;MINTTeam@cms.hhs.gov&lt;/email&gt;.
            </span>
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Operational Solutions Model Usage Components > matches the snapshot > Patient Activation Measure 1`] = `
<DocumentFragment>
  <div>
    <h2
      class="margin-top-0"
    >
      Model usage
    </h2>
    <div
      class="operational-solution-details line-height-body-5 font-body-md text-pre-wrap"
    >
      <p>
        The models below use or plan to use Patient Activation Measure to implement and run their model. Click on each model to learn more about the model and its solutions and IT systems.
      </p>
      <div
        class="usa-alert usa-alert--info usa-alert--slim flex margin-y-3"
        data-testid="alert"
      >
        <div
          class="usa-alert__body"
        >
          <p
            class="usa-alert__text"
          >
            <span>
              This list shows solutions and IT systems identified for models in MINT. Older models, past models, or other models listed in MINT may not appear here. If you have any questions, please contact the MINT Team at &lt;email&gt;MINTTeam@cms.hhs.gov&lt;/email&gt;.
            </span>
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Operational Solutions Model Usage Components > matches the snapshot > Quality Payment Program 1`] = `
<DocumentFragment>
  <div>
    <h2
      class="margin-top-0"
    >
      Model usage
    </h2>
    <div
      class="operational-solution-details line-height-body-5 font-body-md text-pre-wrap"
    >
      <p>
        The models below use or plan to use Quality Payment Program to implement and run their model. Click on each model to learn more about the model and its solutions and IT systems.
      </p>
      <div
        class="usa-alert usa-alert--info usa-alert--slim flex margin-y-3"
        data-testid="alert"
      >
        <div
          class="usa-alert__body"
        >
          <p
            class="usa-alert__text"
          >
            <span>
              This list shows solutions and IT systems identified for models in MINT. Older models, past models, or other models listed in MINT may not appear here. If you have any questions, please contact the MINT Team at &lt;email&gt;MINTTeam@cms.hhs.gov&lt;/email&gt;.
            </span>
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Operational Solutions Model Usage Components > matches the snapshot > Quality Vertical 1`] = `
<DocumentFragment>
  <div>
    <h2
      class="margin-top-0"
    >
      Model usage
    </h2>
    <div
      class="operational-solution-details line-height-body-5 font-body-md text-pre-wrap"
    >
      <p>
        The models below use or plan to use Quality Vertical to implement and run their model. Click on each model to learn more about the model and its solutions and IT systems.
      </p>
      <div
        class="usa-alert usa-alert--info usa-alert--slim flex margin-y-3"
        data-testid="alert"
      >
        <div
          class="usa-alert__body"
        >
          <p
            class="usa-alert__text"
          >
            <span>
              This list shows solutions and IT systems identified for models in MINT. Older models, past models, or other models listed in MINT may not appear here. If you have any questions, please contact the MINT Team at &lt;email&gt;MINTTeam@cms.hhs.gov&lt;/email&gt;.
            </span>
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Operational Solutions Model Usage Components > matches the snapshot > Rapid Measure Development 1`] = `
<DocumentFragment>
  <div>
    <h2
      class="margin-top-0"
    >
      Model usage
    </h2>
    <div
      class="operational-solution-details line-height-body-5 font-body-md text-pre-wrap"
    >
      <p>
        The models below use or plan to use Rapid Measure Development to implement and run their model. Click on each model to learn more about the model and its solutions and IT systems.
      </p>
      <div
        class="usa-alert usa-alert--info usa-alert--slim flex margin-y-3"
        data-testid="alert"
      >
        <div
          class="usa-alert__body"
        >
          <p
            class="usa-alert__text"
          >
            <span>
              This list shows solutions and IT systems identified for models in MINT. Older models, past models, or other models listed in MINT may not appear here. If you have any questions, please contact the MINT Team at &lt;email&gt;MINTTeam@cms.hhs.gov&lt;/email&gt;.
            </span>
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Operational Solutions Model Usage Components > matches the snapshot > ResDAC CMMI Model Data Sharing Model Participation Data Initiative 1`] = `
<DocumentFragment>
  <div>
    <h2
      class="margin-top-0"
    >
      Model usage
    </h2>
    <div
      class="operational-solution-details line-height-body-5 font-body-md text-pre-wrap"
    >
      <p>
        The models below use or plan to use ResDAC CMMI Model Data Sharing Model Participation Data Initiative to implement and run their model. Click on each model to learn more about the model and its solutions and IT systems.
      </p>
      <div
        class="usa-alert usa-alert--info usa-alert--slim flex margin-y-3"
        data-testid="alert"
      >
        <div
          class="usa-alert__body"
        >
          <p
            class="usa-alert__text"
          >
            <span>
              This list shows solutions and IT systems identified for models in MINT. Older models, past models, or other models listed in MINT may not appear here. If you have any questions, please contact the MINT Team at &lt;email&gt;MINTTeam@cms.hhs.gov&lt;/email&gt;.
            </span>
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Operational Solutions Model Usage Components > matches the snapshot > Research and Rapid Cycle Evaluation Group 1`] = `
<DocumentFragment>
  <div>
    <h2
      class="margin-top-0"
    >
      Model usage
    </h2>
    <div
      class="operational-solution-details line-height-body-5 font-body-md text-pre-wrap"
    >
      <p>
        The models below use or plan to use Research and Rapid Cycle Evaluation Group to implement and run their model. Click on each model to learn more about the model and its solutions and IT systems.
      </p>
      <div
        class="usa-alert usa-alert--info usa-alert--slim flex margin-y-3"
        data-testid="alert"
      >
        <div
          class="usa-alert__body"
        >
          <p
            class="usa-alert__text"
          >
            <span>
              This list shows solutions and IT systems identified for models in MINT. Older models, past models, or other models listed in MINT may not appear here. If you have any questions, please contact the MINT Team at &lt;email&gt;MINTTeam@cms.hhs.gov&lt;/email&gt;.
            </span>
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Operational Solutions Model Usage Components > matches the snapshot > Research, Measurement, Assessment, Design, and Analysis 1`] = `
<DocumentFragment>
  <div>
    <h2
      class="margin-top-0"
    >
      Model usage
    </h2>
    <div
      class="operational-solution-details line-height-body-5 font-body-md text-pre-wrap"
    >
      <p>
        The models below use or plan to use Research, Measurement, Assessment, Design, and Analysis to implement and run their model. Click on each model to learn more about the model and its solutions and IT systems.
      </p>
      <div
        class="usa-alert usa-alert--info usa-alert--slim flex margin-y-3"
        data-testid="alert"
      >
        <div
          class="usa-alert__body"
        >
          <p
            class="usa-alert__text"
          >
            <span>
              This list shows solutions and IT systems identified for models in MINT. Older models, past models, or other models listed in MINT may not appear here. If you have any questions, please contact the MINT Team at &lt;email&gt;MINTTeam@cms.hhs.gov&lt;/email&gt;.
            </span>
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Operational Solutions Model Usage Components > matches the snapshot > Risk Adjustment Suite of Systems 1`] = `
<DocumentFragment>
  <div>
    <h2
      class="margin-top-0"
    >
      Model usage
    </h2>
    <div
      class="operational-solution-details line-height-body-5 font-body-md text-pre-wrap"
    >
      <p>
        The models below use or plan to use Risk Adjustment Suite of Systems to implement and run their model. Click on each model to learn more about the model and its solutions and IT systems.
      </p>
      <div
        class="usa-alert usa-alert--info usa-alert--slim flex margin-y-3"
        data-testid="alert"
      >
        <div
          class="usa-alert__body"
        >
          <p
            class="usa-alert__text"
          >
            <span>
              This list shows solutions and IT systems identified for models in MINT. Older models, past models, or other models listed in MINT may not appear here. If you have any questions, please contact the MINT Team at &lt;email&gt;MINTTeam@cms.hhs.gov&lt;/email&gt;.
            </span>
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Operational Solutions Model Usage Components > matches the snapshot > Salesforce Application Review and Scoring 1`] = `
<DocumentFragment>
  <div>
    <h2
      class="margin-top-0"
    >
      Model usage
    </h2>
    <div
      class="operational-solution-details line-height-body-5 font-body-md text-pre-wrap"
    >
      <p>
        The models below use or plan to use Salesforce Application Review and Scoring to implement and run their model. Click on each model to learn more about the model and its solutions and IT systems.
      </p>
      <div
        class="usa-alert usa-alert--info usa-alert--slim flex margin-y-3"
        data-testid="alert"
      >
        <div
          class="usa-alert__body"
        >
          <p
            class="usa-alert__text"
          >
            <span>
              This list shows solutions and IT systems identified for models in MINT. Older models, past models, or other models listed in MINT may not appear here. If you have any questions, please contact the MINT Team at &lt;email&gt;MINTTeam@cms.hhs.gov&lt;/email&gt;.
            </span>
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Operational Solutions Model Usage Components > matches the snapshot > Salesforce CONNECT 1`] = `
<DocumentFragment>
  <div>
    <h2
      class="margin-top-0"
    >
      Model usage
    </h2>
    <div
      class="operational-solution-details line-height-body-5 font-body-md text-pre-wrap"
    >
      <p>
        The models below use or plan to use Salesforce CONNECT to implement and run their model. Click on each model to learn more about the model and its solutions and IT systems.
      </p>
      <div
        class="usa-alert usa-alert--info usa-alert--slim flex margin-y-3"
        data-testid="alert"
      >
        <div
          class="usa-alert__body"
        >
          <p
            class="usa-alert__text"
          >
            <span>
              This list shows solutions and IT systems identified for models in MINT. Older models, past models, or other models listed in MINT may not appear here. If you have any questions, please contact the MINT Team at &lt;email&gt;MINTTeam@cms.hhs.gov&lt;/email&gt;.
            </span>
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Operational Solutions Model Usage Components > matches the snapshot > Salesforce Letter of Intent 1`] = `
<DocumentFragment>
  <div>
    <h2
      class="margin-top-0"
    >
      Model usage
    </h2>
    <div
      class="operational-solution-details line-height-body-5 font-body-md text-pre-wrap"
    >
      <p>
        The models below use or plan to use Salesforce Letter of Intent to implement and run their model. Click on each model to learn more about the model and its solutions and IT systems.
      </p>
      <div
        class="usa-alert usa-alert--info usa-alert--slim flex margin-y-3"
        data-testid="alert"
      >
        <div
          class="usa-alert__body"
        >
          <p
            class="usa-alert__text"
          >
            <span>
              This list shows solutions and IT systems identified for models in MINT. Older models, past models, or other models listed in MINT may not appear here. If you have any questions, please contact the MINT Team at &lt;email&gt;MINTTeam@cms.hhs.gov&lt;/email&gt;.
            </span>
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Operational Solutions Model Usage Components > matches the snapshot > Salesforce Project Officer Support Tool / Portal 1`] = `
<DocumentFragment>
  <div>
    <h2
      class="margin-top-0"
    >
      Model usage
    </h2>
    <div
      class="operational-solution-details line-height-body-5 font-body-md text-pre-wrap"
    >
      <p>
        The models below use or plan to use Salesforce Project Officer Support Tool / Portal to implement and run their model. Click on each model to learn more about the model and its solutions and IT systems.
      </p>
      <div
        class="usa-alert usa-alert--info usa-alert--slim flex margin-y-3"
        data-testid="alert"
      >
        <div
          class="usa-alert__body"
        >
          <p
            class="usa-alert__text"
          >
            <span>
              This list shows solutions and IT systems identified for models in MINT. Older models, past models, or other models listed in MINT may not appear here. If you have any questions, please contact the MINT Team at &lt;email&gt;MINTTeam@cms.hhs.gov&lt;/email&gt;.
            </span>
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Operational Solutions Model Usage Components > matches the snapshot > Salesforce Request for Application 1`] = `
<DocumentFragment>
  <div>
    <h2
      class="margin-top-0"
    >
      Model usage
    </h2>
    <div
      class="operational-solution-details line-height-body-5 font-body-md text-pre-wrap"
    >
      <p>
        The models below use or plan to use Salesforce Request for Application to implement and run their model. Click on each model to learn more about the model and its solutions and IT systems.
      </p>
      <div
        class="usa-alert usa-alert--info usa-alert--slim flex margin-y-3"
        data-testid="alert"
      >
        <div
          class="usa-alert__body"
        >
          <p
            class="usa-alert__text"
          >
            <span>
              This list shows solutions and IT systems identified for models in MINT. Older models, past models, or other models listed in MINT may not appear here. If you have any questions, please contact the MINT Team at &lt;email&gt;MINTTeam@cms.hhs.gov&lt;/email&gt;.
            </span>
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Operational Solutions Model Usage Components > matches the snapshot > Shared Systems 1`] = `
<DocumentFragment>
  <div>
    <h2
      class="margin-top-0"
    >
      Model usage
    </h2>
    <div
      class="operational-solution-details line-height-body-5 font-body-md text-pre-wrap"
    >
      <p>
        The models below use or plan to use Shared Systems to implement and run their model. Click on each model to learn more about the model and its solutions and IT systems.
      </p>
      <div
        class="usa-alert usa-alert--info usa-alert--slim flex margin-y-3"
        data-testid="alert"
      >
        <div
          class="usa-alert__body"
        >
          <p
            class="usa-alert__text"
          >
            <span>
              This list shows solutions and IT systems identified for models in MINT. Older models, past models, or other models listed in MINT may not appear here. If you have any questions, please contact the MINT Team at &lt;email&gt;MINTTeam@cms.hhs.gov&lt;/email&gt;.
            </span>
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Operational Solutions Model Usage Components > matches the snapshot > Transformed Medicaid Statistical Information System 1`] = `
<DocumentFragment>
  <div>
    <h2
      class="margin-top-0"
    >
      Model usage
    </h2>
    <div
      class="operational-solution-details line-height-body-5 font-body-md text-pre-wrap"
    >
      <p>
        The models below use or plan to use Transformed Medicaid Statistical Information System to implement and run their model. Click on each model to learn more about the model and its solutions and IT systems.
      </p>
      <div
        class="usa-alert usa-alert--info usa-alert--slim flex margin-y-3"
        data-testid="alert"
      >
        <div
          class="usa-alert__body"
        >
          <p
            class="usa-alert__text"
          >
            <span>
              This list shows solutions and IT systems identified for models in MINT. Older models, past models, or other models listed in MINT may not appear here. If you have any questions, please contact the MINT Team at &lt;email&gt;MINTTeam@cms.hhs.gov&lt;/email&gt;.
            </span>
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
